# iron_learn

./: .gitignore  COMPLETE_SUMMARY.md  Cargo.toml  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  GPU_NETWORK_MODULAR_GUIDE.md  LANGUAGE_MODEL_READINESS.md  LICENSE  LOSS_ANALYSIS.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_TRANSFORMER.md  TRANSFORMER_ANALYSIS.md  TRANSFORMER_GUIDE.md  anomaly_detection.py  build.rs  build_check.sh  cpu_log  cpu_log_w  data.json  forward_prop.py  generate_data.py  gpu_log  gpu_log_w  gradient_descent  k-means.py  log_reg.py  logistic.py  model.json  neural_net.py  rand_test.py  softmax.py  test.py  videos_to_make.md
bigram/: model.json
data/: bengali.txt  image.json  linear.json  logistic.json  logistic_2.json  names.txt  neural_net.json  neural_net_2.json  sentences.txt
image/: model.json
kernels/: gpu_kernels.cu  gpu_kernels.ptx  gradient_descent.cu  gradient_descent.ptx  matrix_add.cu  matrix_add.ptx  matrix_mul.cu  matrix_mul.ptx
n-gram/: last_good_model.json
neural_net/: model.json
python_scripts/: check_cuda.py  cluster_visualizer.py  final_model_weights.npz  forward_prop.py  image_to_csv.py  neural_net.py  nn.py  pixel_data.csv  pixel_data_50.csv  plot_epoch_error.py  plot_graph.py  requirements.txt  sklearn_nn.py  sklearn_regression.py  softmax.py  transformer.py  weight_visualizer.py  x_pixel_data.csv
src/: app_context.rs  commons.rs  complex.rs  contexts.rs  examples.rs  gpu_context.rs  gpu_regression.rs  gpu_regression_examples.rs  gradient_descent.rs  init.rs  lib.rs  main.rs  main_2.rs  matrix.rs  neural_network.rs  normalizer.rs  numeric.rs  read_file.rs  regression.rs  runners.rs  tensor.rs  tensor_commons.rs  utils.rs  vector.rs
tests/: matrix_test.rs  matrix_vector.rs  matrix_vector_cuda.rs  mod.rs  tensor_test.rs  tensor_test_with_fn.rs  test.rs  test_activations.rs  test_activations_cuda.rs  test_clip.rs  test_clip_cuda.rs  test_commons.rs  test_complex.rs  test_complex_matrix.rs  test_complex_tensor.rs  test_cuda_large_data.rs  test_cuda_large_math.rs  test_cuda_ones.rs  test_div.rs  test_div_cuda.rs  test_gradient_descent.rs  test_large_data.rs  test_loss.rs  test_loss_cuda.rs  test_nn.rs  test_numeric.rs  test_one_hot.rs  test_sum.rs  test_sum_cuda.rs  (+1 more)
(+282 files in other folders)
