[package]
name = "iron_learn"
description = "A pure Rust Machine Learning Library with Generic Tensor and a Gradient Descent Optimization Function"
version = "0.3.2"
edition = "2021"
authors = ["Palash Kanti Kundu (https://www.linkedin.com/in/palash90)"]
readme = "README.md"
repository = "https://github.com/Palash90/iron_learn"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"