[package]
name = "iron_learn"
description = "High-performance pure Rust ML library with GPU-accelerated gradient descent. Supports tensors, complex numbers, linear/logistic regression, and CUDA optimization."
version = "0.5.0"
edition = "2021"
authors = ["Palash Kanti Kundu (https://www.linkedin.com/in/palash90)"]
readme = "README.md"
repository = "https://github.com/Palash90/iron_learn"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cust = "0.3.2"
anyhow = "1.0"
rand = "0.9.2"
rand_distr = "0.5.1"
cublas-sys = "0.1"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
image = "0.25.9"