[package]
name = "iron_learn"
description = "A simple Rust ML library with GPU-accelerated gradient descent. Supports tensors, complex numbers, linear/logistic regression, and CUDA optimization."
version = "0.6.5"
edition = "2021"
authors = ["Palash Kanti Kundu (https://www.linkedin.com/in/palash90)"]
readme = "README.md"
repository = "https://github.com/Palash90/iron_learn"
license = "MIT"
exclude = [
    "python_scripts/*",
    "image/*",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cust = {version = "0.3.2", optional = true}
anyhow = "1.0"
rand = "0.9.2"
rand_distr = "0.5.1"
cublas-sys =  {version = "0.1", optional = true}
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
image = "0.25.9"

[features]
cuda = ["cust", "cublas-sys"]

[dev-dependencies]
tempfile = "3.24.0"
